recursion.cons.lessons.recursion.cons.IsMember.scala.error
isMember:8: error: value trail is not a member of List[Int]
		return isMember(l.trail,v)
                                  ^